
The ABC Settings/File Settings now uses a combobox to store the path
names to the various third party executables. In event that you
have several versions of the executables, it is now easier to
switch between them.

The ABC Settings/Abc2midi page has an added entry box, Extra Midi
Player Parameters. If you are using an external midi player,
such as, timidity, you can now pass additional run time arguments
to the program.

For an upcoming feature called 'ABC assist' three new files have been added:
- abc_assist_panel.py
- tune_actions.py
- tune_elements.py


1.3.6.4

Changes to the user interface were made in order to address, the numerous
problems encountered on the Mac system. These problems include, the toolbar
containing the tempo controller and play position not being displayed
correctly. In addition, the comboboxes in the ABC Settings/ File Settings
did not register a change in the entry boxes.

The Abc Assist function has been improved. Sliders to change the Bass
and Chordal volumes for the accompaniment were introduced.

Added an option to cue the music with two metronome bars before playing
the tune. 

Added in Internals, a function to view the generated MIDI file in
text form.



1.3.7.0

Despite the version number, there are mainly bug fixes and incremental
improvements to the ABC assist function developed by Jan Wybren.

- fix to EasyAbc not gracefully exiting on Windows computer
when no abc file was opened.

- the most recent version of abcm2ps no longer scales everything by
0.75 introducing an incompatibility with EasyAbc note selection using
the mouse. Jan Wybren introduced a fix so EasyAbc works with all versions
of abcm2ps

- automatic bar line insertion fixed for certain meters

- Abc Assist can be docked or undocked (floating window). Other
panes like the editor and musical score can no longer be docked to
different panes. Tie/untie option added for notes. Broken rhythm
( eg c>d or c<d), triplet, slur, and chord options was introduced.  

